--- a/square-app/src/main/resources/application-dev.properties
+++ b/square-app/src/main/resources/application-dev.properties
@@ -10,4 +10,4 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 logging.pattern.level=%X{breadcrumbId} %5p
-logging.level.se.kf=DEBUG
+logging.level.square=DEBUG
